# dspp

./: .gitignore  license.md  readme.md
.github/workflows/: linuxbuild.yml  msbuild.yml  osxbuild.yml  release.yml
dspp/Linux/: CMakeLists.txt
dspp/Linux/dspp/: CMakeLists.txt
dspp/Linux/dspp/code/: DSPPInfo.h  DualSenseChecksum.cpp  DualSenseChecksum.h  DualSenseInput.cpp  DualSenseInput.h  DualSenseMgr.cpp  DualSenseMgr.h  Logger.cpp  Logger.h  utils.h
dspp/Linux/dspp/instructions/: postbuild.sh
dspp/Linux/tests/cmdline/: CMakeLists.txt
dspp/Linux/tests/cmdline/code/: main.cpp
dspp/Linux/tests/gui/: CMakeLists.txt
dspp/Linux/tests/gui/code/: OPLogger.cpp  OPLogger.h  UIEngine.h  VulkanHelpers.cpp  VulkanHelpers.h  main.cpp  window.cpp
dspp/Linux/tests/gui/code/elements/: testElement.h
dspp/OSX/dspp/: CMakeCache.txt  CMakeLists.txt
dspp/OSX/dspp/code/: DualSenseInput.cpp  DualSenseMgr.cpp  Logger.h  utils.h
dspp/OSX/dspp/instructions/: postbuild.sh
dspp/OSX/tests/cmdline/: CMakeLists.txt
dspp/OSX/tests/cmdline/code/: main.cpp
dspp/OSX/tests/gui/: CMakeLists.txt
dspp/OSX/tests/gui/code/: OPLogger.mm  UIEngine.h  UIEngine.mm  main.mm
dspp/OSX/tests/gui/code/elements/: testElement.h
dspp/Windows/: DualSense C++ For Windows.sln  DualSense C++ For Windows.slnLaunch
dspp/Windows/dspp/_vsProj/: DualSense C++.vcxproj  DualSense C++.vcxproj.filters
dspp/Windows/dspp/code/: DualSense.cpp  DualSenseInput.cpp  DualSenseMgr.cpp  DualSenseMgr.h  DualSenseOutput.cpp  DualSenseOutput.h  Logger.cpp
dspp/Windows/dspp/instructions/: postbuild.bat
dspp/Windows/tests/cmdline/_vsProj/: _vsProj.vcxproj  _vsProj.vcxproj.filters
dspp/Windows/tests/cmdline/code/: main.cpp
dspp/Windows/tests/gui/_vsProj/: dspp.gui.logos.rc  dsppgui.vcxproj  dsppgui.vcxproj.filters  imgui.ini  resource.h
dspp/Windows/tests/gui/code/: DPIFunction.h  OPLogger.cpp  OPLogger.h  ResourceMgr.h  UIElement.h  UIEngine.cpp  UIEngine.h  VulkanHelpers.cpp  VulkanHelpers.h  dp.manifest  dspp.gui.fonts.rc  main.cpp  resource.h  window.cpp  window.h
dspp/Windows/tests/gui/code/elements/: testElement.h
dspp/Windows/tests/gui/objs/x64/Debug/: dspp.gui.exe.recipe  dspp.gui_manifest.rc  vc143.idb
dspp/Windows/tests/gui/objs/x64/Release/: dspp.gui.exe.recipe  dspp.gui.fonts.res
dspp/common/dspp/code/: DSPPInfo.h  DualSense.h  DualSenseChecksum.cpp  DualSenseChecksum.h  DualSenseInput.cpp  DualSenseInput.h  DualSenseMgr.cpp  DualSenseMgr.h  DualSenseOutput.cpp  DualSenseOutput.h  Logger.h
